Fix sec3-deco left offset at 320-425px to prevent figure clipping.

--- a/mobile.css
+++ b/mobile.css
@@ -2991,7 +2991,7 @@
   }
 
   .home-page .sec3-deco {
-    left: calc(-52px * var(--sec3-sp-s));
+    left: calc(-30px * var(--sec3-sp-s));
     top: calc(-104px * var(--sec3-sp-s));
     width: 54vw;
   }
